--- a/assets/css/stylesheets/screen.css
+++ b/assets/css/stylesheets/screen.css
@@ -39,35 +39,40 @@ body {
 }
 
 /* line 41, ../sass/screen.scss */
+.h-screen-85 {
+  height: 85vh;
+}
+
+/* line 45, ../sass/screen.scss */
 .theme-color {
   color: #FEB201;
 }
-/* line 43, ../sass/screen.scss */
+/* line 47, ../sass/screen.scss */
 .theme-color a {
   color: #FEB201;
 }
-/* line 45, ../sass/screen.scss */
+/* line 49, ../sass/screen.scss */
 .theme-color a:hover {
   color: #FD9D00;
 }
-/* line 49, ../sass/screen.scss */
+/* line 53, ../sass/screen.scss */
 .theme-color:hover {
   color: #FD9D00;
 }
 
-/* line 54, ../sass/screen.scss */
+/* line 58, ../sass/screen.scss */
 .text-shadow {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
-/* line 58, ../sass/screen.scss */
+/* line 62, ../sass/screen.scss */
 .home-header-cover {
   background-color: #FEB201;
   background-image: linear-gradient(190deg, #FEB201 0%, #f89a00 100%);
   overflow: hidden;
 }
 
-/* line 64, ../sass/screen.scss */
+/* line 68, ../sass/screen.scss */
 .circle-color {
   right: -15%;
   bottom: -15%;
@@ -76,34 +81,54 @@ body {
   background: #FFC000;
   border-radius: 50%;
 }
+@media only screen and (max-width: 1300px) {
+  /* line 68, ../sass/screen.scss */
+  .circle-color {
+    right: -15%;
+    bottom: -15%;
+    width: 100vh;
+    height: 100vh;
+    border-radius: 50% 50% 0% 50%;
+  }
+}
+@media only screen and (max-width: 991px) {
+  /* line 68, ../sass/screen.scss */
+  .circle-color {
+    right: -15%;
+    bottom: -15%;
+    width: 70vh;
+    height: 70vh;
+    border-radius: 50%;
+  }
+}
 
-/* line 73, ../sass/screen.scss */
+/* line 91, ../sass/screen.scss */
 .dropdown-inner {
   opacity: 0;
   z-index: -1;
   transition: all .2s ease-in-out;
 }
-/* line 78, ../sass/screen.scss */
+/* line 96, ../sass/screen.scss */
 .dropdown-inner li a {
   border-bottom: 1px solid rgba(203, 203, 203, 0.173);
 }
-/* line 82, ../sass/screen.scss */
+/* line 100, ../sass/screen.scss */
 .dropdown-inner li:last-child a {
   border-bottom: none;
 }
 
-/* line 89, ../sass/screen.scss */
+/* line 107, ../sass/screen.scss */
 .navbar-top-links-dropdown-wrapper {
   cursor: pointer;
 }
-/* line 92, ../sass/screen.scss */
+/* line 110, ../sass/screen.scss */
 .navbar-top-links-dropdown-wrapper:hover .dropdown-inner {
   transform: scale(1.1);
   opacity: 1;
   z-index: 11;
 }
 
-/* line 100, ../sass/screen.scss */
+/* line 118, ../sass/screen.scss */
 .megamenu-wrapper {
   top: 100%;
   left: 0px;
@@ -114,19 +139,148 @@ body {
   visibility: hidden;
   transition: all .2s ease-in-out;
 }
-/* line 109, ../sass/screen.scss */
+/* line 127, ../sass/screen.scss */
 .megamenu-wrapper .megamenu {
   background: url(../../images/resturent.png) repeat center;
 }
-/* line 112, ../sass/screen.scss */
+/* line 130, ../sass/screen.scss */
 .megamenu-wrapper .megamenu li a {
   font-weight: 500;
 }
 
-/* line 119, ../sass/screen.scss */
+/* line 140, ../sass/screen.scss */
 .megamenu-active {
   transform: scale(1.1);
   opacity: 1;
   z-index: 11;
   visibility: visible;
+}
+
+/* line 147, ../sass/screen.scss */
+.swiper-container {
+  margin: 0px;
+}
+
+/* line 151, ../sass/screen.scss */
+.swiper-slide {
+  width: 100% !important;
+}
+
+/* line 160, ../sass/screen.scss */
+.swiper-pagination-clickable .swiper-pagination-bullet {
+  background: none;
+}
+/* line 162, ../sass/screen.scss */
+.swiper-pagination-clickable .swiper-pagination-bullet:active {
+  outline: none;
+}
+/* line 165, ../sass/screen.scss */
+.swiper-pagination-clickable .swiper-pagination-bullet:focus {
+  outline: none;
+}
+
+/* line 170, ../sass/screen.scss */
+.swiper-pagination-bullet {
+  background: none;
+  margin-left: 5px;
+  font-size: 22px;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  line-height: 36px;
+  color: black;
+  opacity: 1;
+  font-weight: 500;
+}
+
+/* line 183, ../sass/screen.scss */
+.swiper-pagination-bullet-active {
+  border: 1.5px solid white;
+  color: white;
+}
+
+/* line 188, ../sass/screen.scss */
+.swiper-button-prev,
+.swiper-button-next {
+  -webkit-writing-mode: vertical-lr;
+  -moz-writing-mode: vertical-lr;
+  -ms-writing-mode: vertical-lr;
+  writing-mode: vertical-lr;
+  background: transparent;
+  transform: rotate(360deg);
+  color: black;
+  font-weight: 500;
+  font-size: 18px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+/* line 201, ../sass/screen.scss */
+.swiper-button-prev:active,
+.swiper-button-next:active {
+  outline: none;
+}
+/* line 204, ../sass/screen.scss */
+.swiper-button-prev:focus,
+.swiper-button-next:focus {
+  outline: none;
+}
+/* line 207, ../sass/screen.scss */
+.swiper-button-prev:after,
+.swiper-button-next:after {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+@media only screen and (max-width: 991px) {
+  /* line 213, ../sass/screen.scss */
+  .swiper-button-next {
+    right: -30px;
+  }
+}
+/* line 217, ../sass/screen.scss */
+.swiper-button-next:after {
+  transform: rotate(360deg);
+  margin-top: 15px;
+  margin-left: 5px;
+}
+@media only screen and (max-width: 991px) {
+  /* line 217, ../sass/screen.scss */
+  .swiper-button-next:after {
+    margin-left: 7px;
+  }
+}
+
+/* line 227, ../sass/screen.scss */
+.swiper-button-prev {
+  -webkit-writing-mode: vertical-lr;
+  -moz-writing-mode: vertical-lr;
+  -ms-writing-mode: vertical-lr;
+  writing-mode: vertical-lr;
+  background: transparent;
+  transform: rotate(180deg);
+}
+@media only screen and (max-width: 991px) {
+  /* line 227, ../sass/screen.scss */
+  .swiper-button-prev {
+    left: -30px;
+  }
+}
+/* line 237, ../sass/screen.scss */
+.swiper-button-prev:after {
+  transform: rotate(180deg);
+  margin-top: 15px;
+  margin-left: 5px;
+}
+@media only screen and (max-width: 991px) {
+  /* line 237, ../sass/screen.scss */
+  .swiper-button-prev:after {
+    margin-left: 7px;
+  }
+}
+
+/* line 247, ../sass/screen.scss */
+.slide-img {
+  box-shadow: 5px 5px 20px 5px #00000063;
+  border-radius: 50%;
+  overflow: hidden;
 }
