--- a/assets/css/stylesheets/screen.css
+++ b/assets/css/stylesheets/screen.css
@@ -138,48 +138,67 @@ body {
   z-index: -11;
   visibility: hidden;
   transition: all .2s ease-in-out;
+  position: absolute;
 }
-/* line 127, ../sass/screen.scss */
+/* line 128, ../sass/screen.scss */
 .megamenu-wrapper .megamenu {
   background: url(../../images/resturent.png) repeat center;
 }
-/* line 130, ../sass/screen.scss */
+/* line 131, ../sass/screen.scss */
 .megamenu-wrapper .megamenu li a {
   font-weight: 500;
 }
+@media only screen and (max-width: 991px) {
+  /* line 118, ../sass/screen.scss */
+  .megamenu-wrapper {
+    position: fixed;
+    top: inherit;
+    width: 100%;
+    bottom: -400px;
+    left: 0px;
+    z-index: 11;
+  }
+}
 
-/* line 140, ../sass/screen.scss */
+/* line 146, ../sass/screen.scss */
 .megamenu-active {
   transform: scale(1.1);
   opacity: 1;
   z-index: 11;
   visibility: visible;
 }
+@media only screen and (max-width: 991px) {
+  /* line 146, ../sass/screen.scss */
+  .megamenu-active {
+    transform: scale(1);
+    bottom: 0px;
+  }
+}
 
-/* line 147, ../sass/screen.scss */
+/* line 157, ../sass/screen.scss */
 .swiper-container {
   margin: 0px;
 }
 
-/* line 151, ../sass/screen.scss */
+/* line 161, ../sass/screen.scss */
 .swiper-slide {
   width: 100% !important;
 }
 
-/* line 160, ../sass/screen.scss */
+/* line 170, ../sass/screen.scss */
 .swiper-pagination-clickable .swiper-pagination-bullet {
   background: none;
 }
-/* line 162, ../sass/screen.scss */
+/* line 172, ../sass/screen.scss */
 .swiper-pagination-clickable .swiper-pagination-bullet:active {
   outline: none;
 }
-/* line 165, ../sass/screen.scss */
+/* line 175, ../sass/screen.scss */
 .swiper-pagination-clickable .swiper-pagination-bullet:focus {
   outline: none;
 }
 
-/* line 170, ../sass/screen.scss */
+/* line 180, ../sass/screen.scss */
 .swiper-pagination-bullet {
   background: none;
   margin-left: 5px;
@@ -193,13 +212,13 @@ body {
   font-weight: 500;
 }
 
-/* line 183, ../sass/screen.scss */
+/* line 193, ../sass/screen.scss */
 .swiper-pagination-bullet-active {
   border: 1.5px solid white;
   color: white;
 }
 
-/* line 188, ../sass/screen.scss */
+/* line 198, ../sass/screen.scss */
 .swiper-button-prev,
 .swiper-button-next {
   -webkit-writing-mode: vertical-lr;
@@ -214,17 +233,17 @@ body {
   text-transform: uppercase;
   letter-spacing: 2px;
 }
-/* line 201, ../sass/screen.scss */
+/* line 211, ../sass/screen.scss */
 .swiper-button-prev:active,
 .swiper-button-next:active {
   outline: none;
 }
-/* line 204, ../sass/screen.scss */
+/* line 214, ../sass/screen.scss */
 .swiper-button-prev:focus,
 .swiper-button-next:focus {
   outline: none;
 }
-/* line 207, ../sass/screen.scss */
+/* line 217, ../sass/screen.scss */
 .swiper-button-prev:after,
 .swiper-button-next:after {
   font-size: 16px;
@@ -232,25 +251,25 @@ body {
 }
 
 @media only screen and (max-width: 991px) {
-  /* line 213, ../sass/screen.scss */
+  /* line 223, ../sass/screen.scss */
   .swiper-button-next {
     right: -30px;
   }
 }
-/* line 217, ../sass/screen.scss */
+/* line 227, ../sass/screen.scss */
 .swiper-button-next:after {
   transform: rotate(360deg);
   margin-top: 15px;
   margin-left: 5px;
 }
 @media only screen and (max-width: 991px) {
-  /* line 217, ../sass/screen.scss */
+  /* line 227, ../sass/screen.scss */
   .swiper-button-next:after {
     margin-left: 7px;
   }
 }
 
-/* line 227, ../sass/screen.scss */
+/* line 237, ../sass/screen.scss */
 .swiper-button-prev {
   -webkit-writing-mode: vertical-lr;
   -moz-writing-mode: vertical-lr;
@@ -260,25 +279,25 @@ body {
   transform: rotate(180deg);
 }
 @media only screen and (max-width: 991px) {
-  /* line 227, ../sass/screen.scss */
+  /* line 237, ../sass/screen.scss */
   .swiper-button-prev {
     left: -30px;
   }
 }
-/* line 237, ../sass/screen.scss */
+/* line 247, ../sass/screen.scss */
 .swiper-button-prev:after {
   transform: rotate(180deg);
   margin-top: 15px;
   margin-left: 5px;
 }
 @media only screen and (max-width: 991px) {
-  /* line 237, ../sass/screen.scss */
+  /* line 247, ../sass/screen.scss */
   .swiper-button-prev:after {
     margin-left: 7px;
   }
 }
 
-/* line 247, ../sass/screen.scss */
+/* line 257, ../sass/screen.scss */
 .slide-img {
   box-shadow: 5px 5px 20px 5px #00000063;
   border-radius: 50%;
