--- a/assets/css/stylesheets/screen.css
+++ b/assets/css/stylesheets/screen.css
@@ -43,28 +43,34 @@ body {
     height: 100vh;
   }
 }
+@media only screen and (max-width: 991px) {
+  /* line 44, ../sass/screen.scss */
+  .h-screen-75.autoheight {
+    height: auto;
+  }
+}
 
-/* line 46, ../sass/screen.scss */
+/* line 51, ../sass/screen.scss */
 .h-screen-85 {
   height: 85vh;
 }
 
-/* line 50, ../sass/screen.scss */
+/* line 55, ../sass/screen.scss */
 .border-w-trans-2 {
   border-color: rgba(255, 255, 255, 0.2);
 }
 
-/* line 54, ../sass/screen.scss */
+/* line 59, ../sass/screen.scss */
 .border-w-trans-3 {
   border-color: rgba(255, 255, 255, 0.3);
 }
 
-/* line 59, ../sass/screen.scss */
+/* line 64, ../sass/screen.scss */
 .bg-trans-8-hover:hover {
   background: rgba(0, 0, 0, 0.6);
 }
 
-/* line 65, ../sass/screen.scss */
+/* line 70, ../sass/screen.scss */
 .bg-trans-500:before {
   content: "";
   position: absolute;
@@ -75,46 +81,46 @@ body {
   background: rgba(0, 0, 0, 0.6);
 }
 
-/* line 76, ../sass/screen.scss */
+/* line 81, ../sass/screen.scss */
 .theme-color {
   color: #FEB201;
 }
-/* line 78, ../sass/screen.scss */
+/* line 83, ../sass/screen.scss */
 .theme-color a {
   color: #FEB201;
 }
-/* line 80, ../sass/screen.scss */
+/* line 85, ../sass/screen.scss */
 .theme-color a:hover {
   color: #FD9D00;
 }
-/* line 84, ../sass/screen.scss */
+/* line 89, ../sass/screen.scss */
 .theme-color:hover {
   color: #FD9D00;
 }
 
-/* line 89, ../sass/screen.scss */
+/* line 94, ../sass/screen.scss */
 .transition {
   transition: 0.3s;
 }
 
-/* line 93, ../sass/screen.scss */
+/* line 98, ../sass/screen.scss */
 .text-shadow {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
-/* line 97, ../sass/screen.scss */
+/* line 102, ../sass/screen.scss */
 .text-shadow-light {
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
 }
 
-/* line 101, ../sass/screen.scss */
+/* line 106, ../sass/screen.scss */
 .home-header-cover {
   background-color: #FEB201;
   background-image: linear-gradient(190deg, #FEB201 0%, #f89a00 100%);
   overflow: hidden;
 }
 
-/* line 107, ../sass/screen.scss */
+/* line 112, ../sass/screen.scss */
 .circle-color {
   right: -15%;
   bottom: -15%;
@@ -124,7 +130,7 @@ body {
   border-radius: 50%;
 }
 @media only screen and (max-width: 1300px) {
-  /* line 107, ../sass/screen.scss */
+  /* line 112, ../sass/screen.scss */
   .circle-color {
     right: -15%;
     bottom: -15%;
@@ -134,7 +140,7 @@ body {
   }
 }
 @media only screen and (max-width: 991px) {
-  /* line 107, ../sass/screen.scss */
+  /* line 112, ../sass/screen.scss */
   .circle-color {
     right: -15%;
     bottom: -15%;
@@ -144,33 +150,33 @@ body {
   }
 }
 
-/* line 130, ../sass/screen.scss */
+/* line 135, ../sass/screen.scss */
 .dropdown-inner {
   opacity: 0;
   z-index: -1;
   transition: all .2s ease-in-out;
 }
-/* line 135, ../sass/screen.scss */
+/* line 140, ../sass/screen.scss */
 .dropdown-inner li a {
   border-bottom: 1px solid rgba(203, 203, 203, 0.173);
 }
-/* line 139, ../sass/screen.scss */
+/* line 144, ../sass/screen.scss */
 .dropdown-inner li:last-child a {
   border-bottom: none;
 }
 
-/* line 146, ../sass/screen.scss */
+/* line 151, ../sass/screen.scss */
 .navbar-top-links-dropdown-wrapper {
   cursor: pointer;
 }
-/* line 149, ../sass/screen.scss */
+/* line 154, ../sass/screen.scss */
 .navbar-top-links-dropdown-wrapper:hover .dropdown-inner {
   transform: scale(1.1);
   opacity: 1;
   z-index: 11;
 }
 
-/* line 157, ../sass/screen.scss */
+/* line 162, ../sass/screen.scss */
 .megamenu-wrapper {
   top: 100%;
   left: 0px;
@@ -182,16 +188,16 @@ body {
   transition: all .2s ease-in-out;
   position: absolute;
 }
-/* line 167, ../sass/screen.scss */
+/* line 172, ../sass/screen.scss */
 .megamenu-wrapper .megamenu {
   background: url(../../images/resturent.png) repeat center;
 }
-/* line 170, ../sass/screen.scss */
+/* line 175, ../sass/screen.scss */
 .megamenu-wrapper .megamenu li a {
   font-weight: 500;
 }
 @media only screen and (max-width: 991px) {
-  /* line 157, ../sass/screen.scss */
+  /* line 162, ../sass/screen.scss */
   .megamenu-wrapper {
     position: fixed;
     top: inherit;
@@ -202,7 +208,7 @@ body {
   }
 }
 
-/* line 185, ../sass/screen.scss */
+/* line 190, ../sass/screen.scss */
 .megamenu-active {
   transform: scale(1.1);
   opacity: 1;
@@ -210,41 +216,41 @@ body {
   visibility: visible;
 }
 @media only screen and (max-width: 991px) {
-  /* line 185, ../sass/screen.scss */
+  /* line 190, ../sass/screen.scss */
   .megamenu-active {
     transform: scale(1);
     bottom: 0px;
   }
 }
 
-/* line 196, ../sass/screen.scss */
+/* line 201, ../sass/screen.scss */
 .top-cover-swiper-container {
   margin: 0px;
 }
 
-/* line 200, ../sass/screen.scss */
+/* line 205, ../sass/screen.scss */
 .top-cover-swiper-slide {
   width: 100% !important;
 }
 
-/* line 209, ../sass/screen.scss */
+/* line 214, ../sass/screen.scss */
 .swiper-pagination-clickable .swiper-pagination-bullet {
   background: none;
 }
-/* line 211, ../sass/screen.scss */
+/* line 216, ../sass/screen.scss */
 .swiper-pagination-clickable .swiper-pagination-bullet:active {
   outline: none;
 }
-/* line 214, ../sass/screen.scss */
+/* line 219, ../sass/screen.scss */
 .swiper-pagination-clickable .swiper-pagination-bullet:focus {
   outline: none;
 }
 
-/* line 219, ../sass/screen.scss */
+/* line 224, ../sass/screen.scss */
 .cover-swiper-pagination {
   text-align: center;
 }
-/* line 221, ../sass/screen.scss */
+/* line 226, ../sass/screen.scss */
 .cover-swiper-pagination .swiper-pagination-bullet {
   background: none;
   margin-left: 5px;
@@ -256,13 +262,13 @@ body {
   opacity: 1;
   font-weight: 500;
 }
-/* line 232, ../sass/screen.scss */
+/* line 237, ../sass/screen.scss */
 .cover-swiper-pagination .swiper-pagination-bullet-active {
   border: 1.5px solid white;
   color: white;
 }
 
-/* line 238, ../sass/screen.scss */
+/* line 243, ../sass/screen.scss */
 .swiper-button-prev,
 .swiper-button-next {
   -webkit-writing-mode: vertical-lr;
@@ -277,37 +283,37 @@ body {
   text-transform: uppercase;
   letter-spacing: 2px;
 }
-/* line 251, ../sass/screen.scss */
+/* line 256, ../sass/screen.scss */
 .swiper-button-prev:active,
 .swiper-button-next:active {
   outline: none;
 }
-/* line 254, ../sass/screen.scss */
+/* line 259, ../sass/screen.scss */
 .swiper-button-prev:focus,
 .swiper-button-next:focus {
   outline: none;
 }
-/* line 257, ../sass/screen.scss */
+/* line 262, ../sass/screen.scss */
 .swiper-button-prev:after,
 .swiper-button-next:after {
   font-size: 16px;
   font-weight: bold;
   transition: 0.3s;
 }
-/* line 263, ../sass/screen.scss */
+/* line 268, ../sass/screen.scss */
 .swiper-button-prev:hover:after,
 .swiper-button-next:hover:after {
   margin-top: 7px;
 }
 
-/* line 273, ../sass/screen.scss */
+/* line 278, ../sass/screen.scss */
 .swiper-button-next:after {
   transform: rotate(360deg);
   margin-top: 15px;
   margin-left: 5px;
 }
 
-/* line 280, ../sass/screen.scss */
+/* line 285, ../sass/screen.scss */
 .swiper-button-prev {
   -webkit-writing-mode: vertical-lr;
   -moz-writing-mode: vertical-lr;
@@ -316,26 +322,26 @@ body {
   background: transparent;
   transform: rotate(180deg);
 }
-/* line 287, ../sass/screen.scss */
+/* line 292, ../sass/screen.scss */
 .swiper-button-prev:after {
   transform: rotate(180deg);
   margin-top: 15px;
   margin-left: 5px;
 }
 
-/* line 294, ../sass/screen.scss */
+/* line 299, ../sass/screen.scss */
 .slide-img {
   box-shadow: 5px 5px 20px 5px #00000063;
   border-radius: 50%;
   overflow: hidden;
 }
 
-/* line 301, ../sass/screen.scss */
+/* line 306, ../sass/screen.scss */
 .featured-item {
   transition: 0.3s;
   border: 1px solid transparent;
 }
-/* line 304, ../sass/screen.scss */
+/* line 309, ../sass/screen.scss */
 .featured-item .featured-item-title {
   position: absolute;
   left: 0px;
@@ -344,7 +350,7 @@ body {
   opacity: 0;
   transition: 0.3s;
 }
-/* line 312, ../sass/screen.scss */
+/* line 317, ../sass/screen.scss */
 .featured-item .featured-item-price {
   position: absolute;
   left: 0px;
@@ -353,54 +359,49 @@ body {
   opacity: 0;
   transition: 0.3s;
 }
-/* line 320, ../sass/screen.scss */
+/* line 325, ../sass/screen.scss */
 .featured-item:hover {
   border-color: rgba(0, 0, 0, 0.1);
   background-color: rgba(0, 0, 0, 0.03);
 }
-/* line 323, ../sass/screen.scss */
+/* line 328, ../sass/screen.scss */
 .featured-item:hover .featured-item-title {
   top: 20px;
   opacity: 1;
 }
-/* line 327, ../sass/screen.scss */
+/* line 332, ../sass/screen.scss */
 .featured-item:hover .featured-item-price {
   bottom: 20px;
   opacity: 1;
 }
 
-/* line 338, ../sass/screen.scss */
+/* line 343, ../sass/screen.scss */
 .news-shadow {
   box-shadow: -12px 2px 11px 5px rgba(0, 0, 0, 0.03), 11px -8px 14px 0px rgba(0, 0, 0, 0.03);
 }
 
-/* line 342, ../sass/screen.scss */
+/* line 347, ../sass/screen.scss */
 .news-swiper-button-next {
   right: -45px;
   top: 35px;
 }
 
-/* line 347, ../sass/screen.scss */
+/* line 352, ../sass/screen.scss */
 .news-swiper-button-prev {
   left: -45px;
   top: 35px;
 }
 
-/* line 358, ../sass/screen.scss */
+/* line 363, ../sass/screen.scss */
 .partner-swiper-wrapper .swiper-slide {
   background-color: rgba(0, 0, 0, 0.04);
 }
-/* line 360, ../sass/screen.scss */
+/* line 365, ../sass/screen.scss */
 .partner-swiper-wrapper .swiper-slide img {
   filter: grayscale(1);
   transition: 0.3s;
 }
-/* line 365, ../sass/screen.scss */
+/* line 370, ../sass/screen.scss */
 .partner-swiper-wrapper .swiper-slide:hover img {
   filter: grayscale(0);
-}
-
-/* line 373, ../sass/screen.scss */
-.partner-carousel-arrows .arrow {
-  line-height: 3.7rem;
 }
