--- a/assets/css/sass/screen.scss
+++ b/assets/css/sass/screen.scss
@@ -9,6 +9,7 @@
 body {
     // background-image: linear-gradient(315deg, #f6f6f6 0%, #e9e9e9 74%);
     font-family: 'Tajawal', sans-serif;
+    overflow-x: hidden;
 }
 
 $themeColor-light: #FFC000;
@@ -381,3 +382,30 @@ $themeColor-dark: #FD9D00;
 }
 
 // =============== Partners Section End ===============
+// =============== POPup style start ===============
+.swal2-container.swal2-top-left,
+.swal2-container.swal2-top-start {
+    justify-content: center!important;
+}
+
+.swal2-popup {
+    background: none;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    ;
+    background-image: linear-gradient(190deg, $themeColor 0%, darken($themeColor-dark, 15%) 100%)!important;
+    .swal2-title {
+        color: black;
+        text-align: left;
+        margin: 0px!important;
+    }
+    .swal2-styled.swal2-confirm {
+        background-image: linear-gradient(190deg, $themeColor 0%, darken($themeColor-dark, 15%) 100%)!important;
+    }
+    .swal2-input {
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        color: white;
+        font-family: sans-serif;
+    }
+}
+
+// =============== POPup style end ===============
