--- a/assets/css/stylesheets/screen.css
+++ b/assets/css/stylesheets/screen.css
@@ -6,71 +6,72 @@
 /* line 9, ../sass/screen.scss */
 body {
   font-family: 'Tajawal', sans-serif;
+  overflow-x: hidden;
 }
 
-/* line 17, ../sass/screen.scss */
+/* line 18, ../sass/screen.scss */
 .bg-theme-color {
   background-color: #FEB201;
   background-image: linear-gradient(315deg, #FD9D00 0%, #FEB201 74%);
 }
 
-/* line 22, ../sass/screen.scss */
+/* line 23, ../sass/screen.scss */
 .bg-theme-color-hover {
   transition: 0.3s;
 }
-/* line 24, ../sass/screen.scss */
+/* line 25, ../sass/screen.scss */
 .bg-theme-color-hover:hover {
   background-image: linear-gradient(315deg, #FD9D00 0%, #FEB201 74%);
 }
 
-/* line 29, ../sass/screen.scss */
+/* line 30, ../sass/screen.scss */
 .h-screen-25 {
   height: 25vh;
 }
 
-/* line 33, ../sass/screen.scss */
+/* line 34, ../sass/screen.scss */
 .h-screen-50 {
   height: 50vh;
 }
 
-/* line 37, ../sass/screen.scss */
+/* line 38, ../sass/screen.scss */
 .h-screen-75 {
   height: 75vh;
 }
 @media only screen and (max-width: 991px) {
-  /* line 39, ../sass/screen.scss */
+  /* line 40, ../sass/screen.scss */
   .h-screen-75.fullwidth {
     height: 100vh;
   }
 }
 @media only screen and (max-width: 991px) {
-  /* line 44, ../sass/screen.scss */
+  /* line 45, ../sass/screen.scss */
   .h-screen-75.autoheight {
     height: auto;
   }
 }
 
-/* line 51, ../sass/screen.scss */
+/* line 52, ../sass/screen.scss */
 .h-screen-85 {
   height: 85vh;
 }
 
-/* line 55, ../sass/screen.scss */
+/* line 56, ../sass/screen.scss */
 .border-w-trans-2 {
   border-color: rgba(255, 255, 255, 0.2);
 }
 
-/* line 59, ../sass/screen.scss */
+/* line 60, ../sass/screen.scss */
 .border-w-trans-3 {
   border-color: rgba(255, 255, 255, 0.3);
 }
 
-/* line 64, ../sass/screen.scss */
+/* line 65, ../sass/screen.scss */
 .bg-trans-8-hover:hover {
   background: rgba(0, 0, 0, 0.6);
 }
 
-/* line 70, ../sass/screen.scss */
+/* line 71, ../sass/screen.scss */
 .bg-trans-500:before {
   content: "";
   position: absolute;
@@ -81,46 +82,46 @@ body {
   background: rgba(0, 0, 0, 0.6);
 }
 
-/* line 81, ../sass/screen.scss */
+/* line 82, ../sass/screen.scss */
 .theme-color {
   color: #FEB201;
 }
-/* line 83, ../sass/screen.scss */
+/* line 84, ../sass/screen.scss */
 .theme-color a {
   color: #FEB201;
 }
-/* line 85, ../sass/screen.scss */
+/* line 86, ../sass/screen.scss */
 .theme-color a:hover {
   color: #FD9D00;
 }
-/* line 89, ../sass/screen.scss */
+/* line 90, ../sass/screen.scss */
 .theme-color:hover {
   color: #FD9D00;
 }
 
-/* line 94, ../sass/screen.scss */
+/* line 95, ../sass/screen.scss */
 .transition {
   transition: 0.3s;
 }
 
-/* line 98, ../sass/screen.scss */
+/* line 99, ../sass/screen.scss */
 .text-shadow {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
-/* line 102, ../sass/screen.scss */
+/* line 103, ../sass/screen.scss */
 .text-shadow-light {
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
 }
 
-/* line 106, ../sass/screen.scss */
+/* line 107, ../sass/screen.scss */
 .home-header-cover {
   background-color: #FEB201;
   background-image: linear-gradient(190deg, #FEB201 0%, #f89a00 100%);
   overflow: hidden;
 }
 
-/* line 112, ../sass/screen.scss */
+/* line 113, ../sass/screen.scss */
 .circle-color {
   right: -15%;
   bottom: -15%;
@@ -130,7 +131,7 @@ body {
   border-radius: 50%;
 }
 @media only screen and (max-width: 1300px) {
-  /* line 112, ../sass/screen.scss */
+  /* line 113, ../sass/screen.scss */
   .circle-color {
     right: -15%;
     bottom: -15%;
@@ -140,7 +141,7 @@ body {
   }
 }
 @media only screen and (max-width: 991px) {
-  /* line 112, ../sass/screen.scss */
+  /* line 113, ../sass/screen.scss */
   .circle-color {
     right: -15%;
     bottom: -15%;
@@ -150,33 +151,33 @@ body {
   }
 }
 
-/* line 135, ../sass/screen.scss */
+/* line 136, ../sass/screen.scss */
 .dropdown-inner {
   opacity: 0;
   z-index: -1;
   transition: all .2s ease-in-out;
 }
-/* line 140, ../sass/screen.scss */
+/* line 141, ../sass/screen.scss */
 .dropdown-inner li a {
   border-bottom: 1px solid rgba(203, 203, 203, 0.173);
 }
-/* line 144, ../sass/screen.scss */
+/* line 145, ../sass/screen.scss */
 .dropdown-inner li:last-child a {
   border-bottom: none;
 }
 
-/* line 151, ../sass/screen.scss */
+/* line 152, ../sass/screen.scss */
 .navbar-top-links-dropdown-wrapper {
   cursor: pointer;
 }
-/* line 154, ../sass/screen.scss */
+/* line 155, ../sass/screen.scss */
 .navbar-top-links-dropdown-wrapper:hover .dropdown-inner {
   transform: scale(1.1);
   opacity: 1;
   z-index: 11;
 }
 
-/* line 162, ../sass/screen.scss */
+/* line 163, ../sass/screen.scss */
 .megamenu-wrapper {
   top: 100%;
   left: 0px;
@@ -188,16 +189,16 @@ body {
   transition: all .2s ease-in-out;
   position: absolute;
 }
-/* line 172, ../sass/screen.scss */
+/* line 173, ../sass/screen.scss */
 .megamenu-wrapper .megamenu {
   background: url(../../images/resturent.png) repeat center;
 }
-/* line 175, ../sass/screen.scss */
+/* line 176, ../sass/screen.scss */
 .megamenu-wrapper .megamenu li a {
   font-weight: 500;
 }
 @media only screen and (max-width: 991px) {
-  /* line 162, ../sass/screen.scss */
+  /* line 163, ../sass/screen.scss */
   .megamenu-wrapper {
     position: fixed;
     top: inherit;
@@ -208,7 +209,7 @@ body {
   }
 }
 
-/* line 190, ../sass/screen.scss */
+/* line 191, ../sass/screen.scss */
 .megamenu-active {
   transform: scale(1.1);
   opacity: 1;
@@ -216,41 +217,41 @@ body {
   visibility: visible;
 }
 @media only screen and (max-width: 991px) {
-  /* line 190, ../sass/screen.scss */
+  /* line 191, ../sass/screen.scss */
   .megamenu-active {
     transform: scale(1);
     bottom: 0px;
   }
 }
 
-/* line 201, ../sass/screen.scss */
+/* line 202, ../sass/screen.scss */
 .top-cover-swiper-container {
   margin: 0px;
 }
 
-/* line 205, ../sass/screen.scss */
+/* line 206, ../sass/screen.scss */
 .top-cover-swiper-slide {
   width: 100% !important;
 }
 
-/* line 214, ../sass/screen.scss */
+/* line 215, ../sass/screen.scss */
 .swiper-pagination-clickable .swiper-pagination-bullet {
   background: none;
 }
-/* line 216, ../sass/screen.scss */
+/* line 217, ../sass/screen.scss */
 .swiper-pagination-clickable .swiper-pagination-bullet:active {
   outline: none;
 }
-/* line 219, ../sass/screen.scss */
+/* line 220, ../sass/screen.scss */
 .swiper-pagination-clickable .swiper-pagination-bullet:focus {
   outline: none;
 }
 
-/* line 224, ../sass/screen.scss */
+/* line 225, ../sass/screen.scss */
 .cover-swiper-pagination {
   text-align: center;
 }
-/* line 226, ../sass/screen.scss */
+/* line 227, ../sass/screen.scss */
 .cover-swiper-pagination .swiper-pagination-bullet {
   background: none;
   margin-left: 5px;
@@ -262,13 +263,13 @@ body {
   opacity: 1;
   font-weight: 500;
 }
-/* line 237, ../sass/screen.scss */
+/* line 238, ../sass/screen.scss */
 .cover-swiper-pagination .swiper-pagination-bullet-active {
   border: 1.5px solid white;
   color: white;
 }
 
-/* line 243, ../sass/screen.scss */
+/* line 244, ../sass/screen.scss */
 .swiper-button-prev,
 .swiper-button-next {
   -webkit-writing-mode: vertical-lr;
@@ -283,37 +284,37 @@ body {
   text-transform: uppercase;
   letter-spacing: 2px;
 }
-/* line 256, ../sass/screen.scss */
+/* line 257, ../sass/screen.scss */
 .swiper-button-prev:active,
 .swiper-button-next:active {
   outline: none;
 }
-/* line 259, ../sass/screen.scss */
+/* line 260, ../sass/screen.scss */
 .swiper-button-prev:focus,
 .swiper-button-next:focus {
   outline: none;
 }
-/* line 262, ../sass/screen.scss */
+/* line 263, ../sass/screen.scss */
 .swiper-button-prev:after,
 .swiper-button-next:after {
   font-size: 16px;
   font-weight: bold;
   transition: 0.3s;
 }
-/* line 268, ../sass/screen.scss */
+/* line 269, ../sass/screen.scss */
 .swiper-button-prev:hover:after,
 .swiper-button-next:hover:after {
   margin-top: 7px;
 }
 
-/* line 278, ../sass/screen.scss */
+/* line 279, ../sass/screen.scss */
 .swiper-button-next:after {
   transform: rotate(360deg);
   margin-top: 15px;
   margin-left: 5px;
 }
 
-/* line 285, ../sass/screen.scss */
+/* line 286, ../sass/screen.scss */
 .swiper-button-prev {
   -webkit-writing-mode: vertical-lr;
   -moz-writing-mode: vertical-lr;
@@ -322,26 +323,26 @@ body {
   background: transparent;
   transform: rotate(180deg);
 }
-/* line 292, ../sass/screen.scss */
+/* line 293, ../sass/screen.scss */
 .swiper-button-prev:after {
   transform: rotate(180deg);
   margin-top: 15px;
   margin-left: 5px;
 }
 
-/* line 299, ../sass/screen.scss */
+/* line 300, ../sass/screen.scss */
 .slide-img {
   box-shadow: 5px 5px 20px 5px #00000063;
   border-radius: 50%;
   overflow: hidden;
 }
 
-/* line 306, ../sass/screen.scss */
+/* line 307, ../sass/screen.scss */
 .featured-item {
   transition: 0.3s;
   border: 1px solid transparent;
 }
-/* line 309, ../sass/screen.scss */
+/* line 310, ../sass/screen.scss */
 .featured-item .featured-item-title {
   position: absolute;
   left: 0px;
@@ -350,7 +351,7 @@ body {
   opacity: 0;
   transition: 0.3s;
 }
-/* line 317, ../sass/screen.scss */
+/* line 318, ../sass/screen.scss */
 .featured-item .featured-item-price {
   position: absolute;
   left: 0px;
@@ -359,49 +360,78 @@ body {
   opacity: 0;
   transition: 0.3s;
 }
-/* line 325, ../sass/screen.scss */
+/* line 326, ../sass/screen.scss */
 .featured-item:hover {
   border-color: rgba(0, 0, 0, 0.1);
   background-color: rgba(0, 0, 0, 0.03);
 }
-/* line 328, ../sass/screen.scss */
+/* line 329, ../sass/screen.scss */
 .featured-item:hover .featured-item-title {
   top: 20px;
   opacity: 1;
 }
-/* line 332, ../sass/screen.scss */
+/* line 333, ../sass/screen.scss */
 .featured-item:hover .featured-item-price {
   bottom: 20px;
   opacity: 1;
 }
 
-/* line 343, ../sass/screen.scss */
+/* line 344, ../sass/screen.scss */
 .news-shadow {
   box-shadow: -12px 2px 11px 5px rgba(0, 0, 0, 0.03), 11px -8px 14px 0px rgba(0, 0, 0, 0.03);
 }
 
-/* line 347, ../sass/screen.scss */
+/* line 348, ../sass/screen.scss */
 .news-swiper-button-next {
   right: -45px;
   top: 35px;
 }
 
-/* line 352, ../sass/screen.scss */
+/* line 353, ../sass/screen.scss */
 .news-swiper-button-prev {
   left: -45px;
   top: 35px;
 }
 
-/* line 363, ../sass/screen.scss */
+/* line 364, ../sass/screen.scss */
 .partner-swiper-wrapper .swiper-slide {
   background-color: rgba(0, 0, 0, 0.04);
 }
-/* line 365, ../sass/screen.scss */
+/* line 366, ../sass/screen.scss */
 .partner-swiper-wrapper .swiper-slide img {
   filter: grayscale(1);
   transition: 0.3s;
 }
-/* line 370, ../sass/screen.scss */
+/* line 371, ../sass/screen.scss */
 .partner-swiper-wrapper .swiper-slide:hover img {
   filter: grayscale(0);
+}
+
+/* line 386, ../sass/screen.scss */
+.swal2-container.swal2-top-left,
+.swal2-container.swal2-top-start {
+  justify-content: center !important;
+}
+
+/* line 391, ../sass/screen.scss */
+.swal2-popup {
+  background: none;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  background-image: linear-gradient(190deg, #FEB201 0%, #b16e00 100%) !important;
+}
+/* line 396, ../sass/screen.scss */
+.swal2-popup .swal2-title {
+  color: black;
+  text-align: left;
+  margin: 0px !important;
+}
+/* line 401, ../sass/screen.scss */
+.swal2-popup .swal2-styled.swal2-confirm {
+  background-image: linear-gradient(190deg, #FEB201 0%, #b16e00 100%) !important;
+}
+/* line 404, ../sass/screen.scss */
+.swal2-popup .swal2-input {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  color: white;
+  font-family: sans-serif;
 }
